fix(svg): center svgs within sidenavitems #17
Previously, SVGs were assigned a style top: -4px. This was causing the
SVGs to be misaligned within the parent. This commit removes the
top: -4px style from the SVGs.

Closes #17

Changes to be committed:
	modified:   src/style-items.scss

--- a/src/style-items.scss
+++ b/src/style-items.scss
@@ -11,7 +11,6 @@
 @import './../node_modules/@aurodesignsystem/webcorestylesheets/src/core';
 
 svg {
-  top: -4px;
   width: var(--ds-size-300, $ds-size-300);
   /* stylelint-disable-next-line declaration-no-important */
   height: var(--ds-size-300, $ds-size-300) !important; // !important necc. to override inline styling
